<resources>

    <string name="app_name">Rando BZH</string>
    <string name="menu_settings">Paramètres</string>
    <string name="title_activity_home">Rando BZH</string>

    <!-- Page d'accueil -->
    <string name="button_vtt_text">VTT</string>
    <string name="button_cyclo_text">Cyclo</string>
    <string name="button_marche_text">Marche</string>
    <string name="dpt22">22</string>
    <string name="dpt29">29</string>
    <string name="dpt35">35</string>
    <string name="dpt56">56</string>
    <string name="dpt44">44</string>
    <string name="title_activity_rando_list">Randonnées</string>
    <string name="bouton_listRandos">Randonnées</string>
    <string name="msg_choisir_dpt">Veuillez sélectionner au moins un département</string>
    <string name="label_titreHome">Le calendrier des randonnées bretonnes</string>
    <string name="label_sports">Sports :</string>
    <string name="label_departements">Départements :</string>
    <string name="chargement">Chargement en cours &#8230;</string>
    <string name="msg_no_connection">Pas de connexion réseau, impossible de charger les nouvelles randos.</string>

    <!-- Page Liste des randos -->
    <string name="tab1">Janvier</string>
    <string name="tab2">Février</string>
    <string name="tab3">Mars</string>
    <string name="tab4">Avril</string>
    <string name="tab5">Mai</string>
    <string name="tab6">Juin</string>
    <string name="tab7">Juillet</string>
    <string name="tab8">Aout</string>
    <string name="tab9">Septembre</string>
    <string name="tab10">Octobre</string>
    <string name="tab11">Novembre</string>
    <string name="tab12">Décembre</string>
    <string name="title_activity_rando_list_view_loader">RandoListViewLoader</string>

    <!-- Page Detail de rando -->
    <string name="title_activity_rando_detail">Détail de la rando</string>
    <string name="label_date">Date : </string>
    <string name="label_dpt">Departement : </string>
    <string name="label_lieu">Lieu : </string>
    <string name="label_nom">Nom : </string>
    <string name="label_orga">Organisateur : </string>
    <string name="label_rdv">Lieu de rdv : </string>
    <string name="label_horaire">Horaires : </string>
    <string name="label_site">Site web : </string>
    <string name="label_prixP">Prix public : </string>
    <string name="label_prixC">Prix club : </string>
    <string name="label_contact">Contact : </string>
    <string name="label_desc">Description : </string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_test_activity__list_child">TestActivity_ListChild</string>
    
    <!-- Menus -->
    <string name="menu_exit">Sortir</string>
    <string name="dialog_msg_exit">Voulez-vous quitter l\'application ?</string>
    <string name="bouton_oui">Oui</string>
    <string name="bouton_non">Non</string>

</resources>