<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	<RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" >

        <RadioButton
            android:id="@+id/radio_vtt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/button_vtt_text" />

        <RadioButton
            android:id="@+id/radio_cyclo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cyclo_text" />

        <RadioButton
            android:id="@+id/radio_marche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_marche_text" />
    </RadioGroup>

    <!-- BEGIN - Checkbox Departements -->
    <LinearLayout
        android:id="@+id/linearLayout_dpts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="50dp" >

        <LinearLayout
            android:id="@+id/linearLayout_dpt22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/checkBox_dpt22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal" />

            <TextView
                android:id="@+id/textView_dpt22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginRight="3dp"
                android:text="@string/dpt22" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_dpt29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/checkBox_dpt29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal" />

            <TextView
                android:id="@+id/textView_dpt29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginRight="3dp"
                android:text="@string/dpt29" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_dpt35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/checkBox_dpt35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal" />

            <TextView
                android:id="@+id/textView_dpt35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginRight="3dp"
                android:text="@string/dpt35" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_dpt56"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/checkBox_dpt56"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal" />

            <TextView
                android:id="@+id/textView_dpt56"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginRight="3dp"
                android:text="@string/dpt56" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_dpt44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/checkBox_dpt44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal" />

            <TextView
                android:id="@+id/textView_dpt44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginRight="3dp"
                android:text="@string/dpt44" />
        </LinearLayout>
    </LinearLayout>
    <!-- END - Checkbox Departements -->

    <Button
        android:id="@+id/buttonRandoList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout_dpts"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/bouton_listRandos"
        android:onClick="openRandoListView" />

</RelativeLayout>
