<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_date" />

            <TextView
                android:id="@+id/detail_date_valeur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textDptLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_dpt" />

            <TextView
                android:id="@+id/detail_departement_valeur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textLieuLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_lieu" />

            <TextView
                android:id="@+id/detail_lieu_valeur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        
    </LinearLayout>

</RelativeLayout>